--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "rsbuild dev --open",
     "build": "rsbuild build",
-    "preview": "rsbuild preview",
-    "mate": "mate deploy upload --dir dist --token 74a4439e17a3ab0e0959a6cc6c82928743ce8330f18250be9e8bcb1f4b454afb --project 561 --tag latest"
+    "preview": "rsbuild preview"
   },
   "dependencies": {
     "@telegram-apps/sdk-react": "^2.0.22",
@@ -24,7 +23,6 @@
     "@rsbuild/core": "^1.1.8",
     "@rsbuild/plugin-basic-ssl": "^1.1.1",
     "@rsbuild/plugin-react": "^1.0.7",
-    "@telegram-apps/mate": "^0.0.25",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "tailwindcss": "^3.4.17",
